# RiUtil

./: .gitignore  README.md  meson.build
include/RiUtil/: types.hpp
src/: RiUtil.hpp  types.cpp
src/RiUtil/: enums.hpp  types.cpp  types.hpp
